--- a/src/data/levels/03_Cartridge/03_The magic constant/chat/en.yml
+++ b/src/data/levels/03_Cartridge/03_The magic constant/chat/en.yml
@@ -25,6 +25,7 @@ exercise:
   - (*) how can I add a constructor? 😳 [constructor]
   - (*) I need help checking the bytes 🥺 [help]
   - (*) help me throw an error 🤔 [errors]
+  - (*) how can I debug? 🐞 [debug]
 
 constructor:
   messages:
@@ -53,6 +54,18 @@ errors:
   - |-
     to throw errors, use:
       ```javascript throw new Error("a message");```
+  responses:
+  - ...exercise
+
+debug:
+  messages:
+  - there's multiple ways of debugging your code
+  - ➰  using the `repl` command to manually instantiate your classes or try JS expressions
+  - 🐞  adding a `debugger;` statement to your code and using your browser's native dev tools
+  - 🧾  adding a `console.log(...)`, which logs something into your browser's dev tools
+  - |-
+    🗃️  adding an `EmuDevz.log(...)`, which logs a string into the `Log` tab of the 🐞  <Debugger>
+      (this one will be useful later, when running ROMs in the emulator)
   responses:
   - ...exercise
 
