--- a/src/data/levels/03_Cartridge/03_The magic constant/chat/es.yml
+++ b/src/data/levels/03_Cartridge/03_The magic constant/chat/es.yml
@@ -62,9 +62,9 @@ debug:
   - hay varias formas de depurar tu código
   - ➰  usando el comando `repl` para crear tus clases manualmente o probar expresiones JS
   - 🐞  agregando una sentencia `debugger;` en tu código y usando las herramientas de desarrollo del navegador
-  - 🧾  agregando un `console.log(...)`, que muestra algo en las herramientas de desarrollo del navegador
+  - 🧾  llamando a `console.log(...)`, que muestra algo en las herramientas de desarrollo del navegador
   - |-
-    🗃️  agregando un `EmuDevz.log(...)`, que muestra una cadena en la pestaña `Log` del 🐞  <Depurador>
+    🗃️  llamando a `EmuDevz.log(...)`, que muestra una cadena en la pestaña `Log` del 🐞  <Depurador>
       (esto será útil más adelante, cuando ejecutes ROMs en el emulador)
   responses:
   - ...exercise
